[project]
name = "property-driven-rl"
version = "0.1.0"
description = "Property-driven RL for bug fixing"
requires-python = ">=3.12"
dependencies = [
  "verifiers @ git+https://github.com/PrimeIntellect-ai/verifiers.git",
]

[tool.uv]
managed = true

[tool.uv.sources]
verifiers = { git = "https://github.com/PrimeIntellect-ai/verifiers.git" }
